--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1486,6 +1486,16 @@ config SENSORS_NCT6775_CORE
 	  If built as a module, the module will be called
 	  nct6775-core.
 
+config SENSORS_NCT6687
+	tristate "Nuvoton NCT6687D"
+	depends on !PPC
+	help
+	  If you say yes here you get support for the hardware monitoring
+	  functionality of the Nuvoton NCT6687D eSIO chip.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called nct6687.
+
 config SENSORS_NCT6775
 	tristate "Platform driver for Nuvoton NCT6775F and compatibles"
 	depends on !PPC
